--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0|^8.1|^8.2",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "php": ">=7.1.3",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "extra": {
         "laravel": {
