remove illuminate/support and rename author name

--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,12 @@
     },
     "authors": [
         {
-            "name": "Developer Zihad",
+            "name": "Zihadul Islam",
             "email": "devzihad2022@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
+        "php": ">=7.3"
     },
     "extra": {
         "laravel": {
